force-app/main/default/objects/Tryout__c/Tryout__c.object-meta.xml
<CustomObject>
    <label>Tryout</label>
    <pluralLabel>Tryouts</pluralLabel>
    <nameField>
        <label>Tryout Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tryout sessions for player evaluations</description>
</CustomObject>