force-app/main/default/objects/Tryout__c/fields/Arena__c.field-meta.xml
<CustomField>
    <fullName>Arena__c</fullName>
    <label>Arena</label>
    <type>Lookup</type>
    <referenceTo>Arena__c</referenceTo>
    <relationshipLabel>Tryouts</relationshipLabel>
    <relationshipName>Tryouts</relationshipName>
    <description>The arena where the tryout will be held</description>
</CustomField>