force-app/main/default/objects/Tryout__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>Date/Time</label>
    <type>DateTime</type>
    <required>true</required>
    <description>Date and time of the tryout session</description>
</CustomField>