force-app/main/default/objects/Tryout__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Division</label>
    <type>Lookup</type>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Tryouts</relationshipLabel>
    <relationshipName>Tryouts</relationshipName>
    <required>true</required>
    <description>The division this tryout is for</description>
</CustomField>