force-app/main/default/objects/Tryout__c/fields/Max_Participants__c.field-meta.xml
<CustomField>
    <fullName>Max_Participants__c</fullName>
    <label>Max Participants</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Maximum number of participants allowed</description>
</CustomField>